# portfolio_project

./: .env.example  .gitignore  ADVANCED_GALLERY_FEATURES.md  ANIMATION_FEATURES_SUMMARY.md  BEEKEEPING_SECTION_SUMMARY.md  BUTTON_LINKS_COMPREHENSIVE_FIX.md  CLEAN_REVERT_COMMIT.md  COMMIT_DETAILS.md  COMPLETE_FILTER_FIX_SUMMARY.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  EMAIL_SETUP_INSTRUCTIONS.md  EMERGENCY_FIX_STEPS.md  FILTER_DEBUGGING_GUIDE.md  FILTER_SYSTEM_IMPROVEMENTS.md  FINAL_BUTTON_FIX_COMMIT.md  GALLERY_AUDIT_SUMMARY.md  GALLERY_UPDATES_SUMMARY.md  HOW_TO_UPDATE_DATA.md  INTERESTS_AND_FILTERS_FIX.md  INTERESTS_PAGE_FIX.md  PORTFOLIO_UPDATES_SUMMARY.md  PROFILE_PHOTO_UPDATES.md  PROJECT_BUTTONS_FIX_SUMMARY.md  PROJECT_DOCUMENTATION.md  README.md  RESTRUCTURE_IMPLEMENTATION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  UI_UX_IMPROVEMENTS_SUMMARY.md  URGENT_PROJECT_FIX.md  app.py  bash.exe.stackdump  build.sh  config.py  dockerfile  fix_projects_database.py  procfile  pyproject.toml  render.yaml  (+10 more)
.github/workflows/: ci.yml  main_kh.yml  main_khribech-portfolio.yml  main_khribech.yml  main_khribech1.yml  main_portfoliokh.yml  main_portofoliokh.yml
app/: __init__.py
app/controllers/: __init__.py  portfolio_controller.py
app/models/: __init__.py  experience.py  project.py  skill.py
app/static/css/: styles.css
app/templates/portfolio/: index.html  navbar.html  project.html  projects.html  skill.html
instance/: development.db  production.db
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
portfolio_app/: __init__.py
portfolio_app/controllers/: __init__.py  portfolio_controller.py
portfolio_app/models/: experience.py  project.py  skill.py
portfolio_app/static/css/: advanced-gallery.css  modern-portfolio.css  profile-avatar.css
portfolio_app/static/js/: advanced-gallery.js  animations.js  button-fix.js  debug-buttons.js  force-button-fix.js  hero-animations.js  modern-portfolio.js  professional-animations.js  project-filters.js  simple-filters.js
portfolio_app/templates/: about.html  base.html  contact.html  experience.html  gallery.html  index.html  interests.html  projects.html  skills.html
portfolio_app/templates/portfolio/: experience.html  footer.html  project.html  skills.html
static/css/: styles.css
templates/: about.html  base.html  contact.html  experience.html  index.html  projects.html  skills.html
